# ksp-proboj-2026-jar-foyer

./: README.md  RULES.md  config.json  games.json  run_observer.py  server_linux
maps/: bandicoot.ppm  bracket.ppm  empty.ppm  eyes.ppm  greece.ppm  grid.ppm  kopec_srandy.ppm  kto_je_toto.ppm  lines.ppm  maze.ppm  net.ppm  psy_za_plotom.ppm  race.ppm  root.ppm  supervillain.ppm  sus.ppm
observer/: Gemini_Generated_Image_ss121iss121iss12.xcf  clovek.xcf  index.html  nemrtvy.xcf  tomb.xcf  trava.xcf  voda.xcf
observer/assets/: index-BUNkUDL7.css  index-CDU5fDgm.js
players/cpp/: .clangd  .gitignore  Makefile  README.md  bot.cpp
players/cpp/common/: bot.h  comms.cpp  comms.h  constants.h  data.h  helper.cpp  main.cpp
players/python/: .gitignore  Makefile  constants.py  data.py  game.py  player.py
server/: .gitignore  CMakeLists.txt  main.cpp  musl-toolchain.cmake  windows-toolchain.cmake
server/game/: CMakeLists.txt
server/game/include/: ant_spawn_phase.h  attack_phase.h  check_collisions.h  constants.h  food_spawn_phase.h  game.h  gather_phase.h  razing_phase.h
server/game/src/: ant_spawn_phase.cpp  attack_phase.cpp  check_collisions.cpp  food_spawn_phase.cpp  game.cpp  game_init.cpp  gather_phase.cpp  handle_player_moves.cpp  razing_phase.cpp
server/helper/: CMakeLists.txt
server/helper/include/: ant.h  config.h  food.h  hill.h  player.h  point.h  rng.h  types.h
server/helper/src/: ant.cpp  player.cpp  point.cpp
server/map/: CMakeLists.txt
server/map/include/: map.h  parse_ppm.h
server/map/src/: map.cpp  parse_ppm.cpp
server/protocol/: CMakeLists.txt
server/protocol/include/: data.h  data_impl.h  format.h  runner.h  runner_utils.h
server/protocol/src/: format.cpp  moves.cpp  runner.cpp  runner_utils.cpp
